--- a/index.css
+++ b/index.css
@@ -10,13 +10,14 @@ body {
 header {
   display: flex;
   width: 100%;
-  height: 91px;
+  min-height: 91px;
   background-color: #afaed3;
   color: white;
   justify-content: center;
   text-align: center;
 }
 header p {
+  
   font-size: 64px;
   text-shadow: gray 3px 3px 3px;
 }
