--- a/index.css
+++ b/index.css
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: none;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 body {
   background-color: #f5f4d6;
@@ -17,7 +21,6 @@ header {
   text-align: center;
 }
 header p {
-  
   font-size: 64px;
   text-shadow: gray 3px 3px 3px;
 }
@@ -64,7 +67,7 @@ header p {
   padding-right: 57px;
 }
 .btn {
-    width: 100%;
+  width: 100%;
   max-width: 130px;
   height: 120px;
   border-radius: 50%;
@@ -108,4 +111,3 @@ header p {
     max-height: 610px;
   }
 }
-
